--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,34 @@
 *{
   margin: 0;
   padding: 0;
+  text-align: center;
+  font-family: "Inter";
 }
 
-
 nav{
-  padding-top: 20px;
-  padding-bottom: 10px;
+  padding: 20px;
+  width: 100%;
   display: flex;
   justify-content: center;
-  gap: 50px;
+  gap: 20px;
   background: black;
   color: white;
 }
+#navbox{
+  display: flex;
+}
+#special{
+  margin-right: auto;
+}
+
+#intro{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: lightblue;
+  height: 360px;
+  color:black;
+  padding:20px;
+}
+
 
