--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,11 @@
   text-align: center;
   font-family: "Inter";
 }
-
+mark{
+  background-color: transparent;
+}
 nav{
+  position: relative;
   padding: 20px;
   width: 100%;
   display: flex;
@@ -31,4 +34,43 @@ nav{
   padding:20px;
 }
 
+h1{
+  font-size: 150px;
+}
 
+h3{margin-top: 20px;}
+
+h3,h4{text-align: left;}
+#second{
+  background:rgb(47, 58, 65);
+  padding: 60px;
+  display: flex;
+  gap: 0px;
+  justify-content: center;
+  height: 800px;
+  
+}
+
+#second>div{
+  width: 300px;
+  height: 400px;
+}
+#content{
+  padding-top: 20px;
+}
+#second>div>img{
+  object-fit: cover;
+  height: auto;
+}
+
+button{
+  margin-top: 10px;
+  background-color: #4D5B9E;
+  border-style: none;
+  width: 100%;
+  border-radius: 15px;
+  height:30px;
+  color:white;
+  font-size: medium;
+  
+}
