--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ h3{margin-top: 20px;}
 
 h3,h4{text-align: left;}
 #second{
+  flex-wrap: wrap;
   background:rgb(47, 58, 65);
   padding: 60px;
   display: flex;
@@ -63,7 +64,7 @@ h3,h4{text-align: left;}
   height: auto;
 }
 
-button{
+.linkedin{
   margin-top: 10px;
   background-color: #4D5B9E;
   border-style: none;
@@ -73,4 +74,52 @@ button{
   color:white;
   font-size: medium;
   
+}
+
+#projectlist{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap:15px;
+}
+#projectx{
+  width: 300px;
+  height:300px;
+  background: grey;
+  border-radius: 9%;
+  overflow:hidden;
+}
+
+#projectx>section{
+height: 220px;
+overflow:hidden;
+}
+
+h5{
+  font-size: x-large;
+  color: white;
+  background-color: black;
+  padding: 4px;
+}
+
+.img2{
+  width: 100%;
+  height:100%;
+}
+
+.github{
+  background-color: #111216;
+  border-style: none;
+  width: 100%;
+  height:50px;
+  color:white;
+  font-size: x-large;
+}
+
+
+.github:hover{
+  background-color: rebeccapurple;
+}
+#projectx:hover{
+  box-shadow: 0 12px 16px 0 rgba(255, 5, 5, 0.24), 0 17px 50px 0 rgba(255, 0, 0, 0.19);
 }
