--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,14 @@ mark{
 }
 nav{
   position: relative;
-  padding: 20px;
+  padding: 10px;
   width: 100%;
   display: flex;
   justify-content: center;
   gap: 20px;
   background: black;
   color: white;
+  font-size: 1.2vmax;
 }
 #navbox{
   display: flex;
@@ -35,12 +36,13 @@ nav{
 }
 
 h1{
-  font-size: 150px;
+  font-size: 9.2vmax;
 }
 
 h3{margin-top: 20px;}
 
-h3,h4{text-align: left;}
+h3,h4{text-align: left; 
+  color:white;}
 #second{
   flex-wrap: wrap;
   background:rgb(47, 58, 65);
@@ -81,6 +83,10 @@ h3,h4{text-align: left;}
   flex-wrap: wrap;
   justify-content: center;
   gap:15px;
+  margin-top: 20px;
+  padding-left: 10vmax;
+  padding-right: 10vmax;
+
 }
 #projectx{
   width: 300px;
@@ -98,7 +104,7 @@ overflow:hidden;
 h5{
   font-size: x-large;
   color: white;
-  background-color: black;
+  background-color: rebeccapurple;
   padding: 4px;
 }
 
@@ -108,7 +114,7 @@ h5{
 }
 
 .github{
-  background-color: #111216;
+  background-color: rebeccapurple;
   border-style: none;
   width: 100%;
   height:50px;
@@ -118,8 +124,12 @@ h5{
 
 
 .github:hover{
-  background-color: rebeccapurple;
+  background-color: rgb(72, 17, 128);
 }
 #projectx:hover{
-  box-shadow: 0 12px 16px 0 rgba(255, 5, 5, 0.24), 0 17px 50px 0 rgba(255, 0, 0, 0.19);
+  box-shadow: 0 12px 16px 0 rgba(15, 1, 1, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+h2{
+  margin-top: 25px;
 }
