--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
 mark{
   background-color: transparent;
 }
+
+body{
+  background-color:  lightblue;
+}
 nav{
   position: relative;
   padding: 10px;
@@ -30,13 +34,13 @@ nav{
   flex-direction: column;
   justify-content: center;
   background: lightblue;
-  height: 360px;
+  height: 390px;
   color:black;
   padding:20px;
 }
 
 h1{
-  font-size: 9.2vmax;
+  font-size: 8.8vmax;
 }
 
 h3{margin-top: 20px;}
@@ -82,10 +86,11 @@ h3,h4{text-align: left;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap:15px;
-  margin-top: 20px;
-  padding-left: 10vmax;
-  padding-right: 10vmax;
+  gap:30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  background: lightblue;
 
 }
 #projectx{
@@ -104,7 +109,7 @@ overflow:hidden;
 h5{
   font-size: x-large;
   color: white;
-  background-color: rebeccapurple;
+  background-color: rgb(255, 123, 0);
   padding: 4px;
 }
 
@@ -114,7 +119,7 @@ h5{
 }
 
 .github{
-  background-color: rebeccapurple;
+  background-color: rgb(255, 123, 0);
   border-style: none;
   width: 100%;
   height:50px;
@@ -130,6 +135,40 @@ h5{
   box-shadow: 0 12px 16px 0 rgba(15, 1, 1, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
-h2{
-  margin-top: 25px;
+.viewongithub{
+  background: #4D5B9E;
+  font-size: large;
+  border-radius: 12px;
+  padding: 10px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  color:white;
+  text-decoration:none;
+}
+
+.projecttitle{
+  padding-top: 5px;
+  background: lightblue;
+  font-size: 3.5vmax;
+}
+
+.toolboxtitle{
+  padding-top: 75px;
+  background: lightblue;
+  font-size: 2.8vmax;
+}
+
+#toolbox{
+  padding-top: 20px;
+  background: lightblue;
+  display: flex;
+  justify-content: center;
+  gap:120px ;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin-bottom: 50px
+}
+
+#toolbox>h2{
+  font-size: xx-large;
 }
